# ptic

./: .gitignore  README.md  requirements.txt  setup.cfg
doc/examples/: IMDB_classification.py  dili_classification.py  multi_classification.py  multi_classification_conferences.py
ptic/: logit_ptic.py  neuro_ptic.py  pmi_tfidf_classifier.py
