[metadata]
name = ptic
version = 0.0.1
author = Arsentii Ivasiuk, Ihor Stepanov, Stanislav Zubenko, Alina Frolova
author_email = arsentii.ivasiuk@gmail.com, fshodan@gmail.com
description = Text classificationw with point-wise mutual information and tf-idf (term frequency-inverse document frequency)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sysbio-vo/ptic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPL v3.0
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    pandas
    tqdm
    en_core_sci_lg@https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.4.0/en_core_sci_lg-0.4.0.tar.gz
    spacy
packages = find:
python_requires = >=3.7
include_package_data = True