[metadata]
name = ptic
version = 0.0.4
author = Ihor Stepanov, Arsentii Ivasiuk, Stanislav Zubenko, Alina Frolova
author_email = igor.stepanov2000@gmail.com, arsentii.ivasiuk@gmail.com, dantistnfs@gmail.com, fshodan@gmail.com
description = Text classification with point-wise mutual information and tf-idf (term frequency-inverse document frequency)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sysbio-vo/ptic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
install_requires =
    regex
    numpy
    pandas
    tqdm
    nltk
    torch
packages = find:
python_requires = >=3.7
include_package_data = True
